--- a/index.html
+++ b/index.html
@@ -216,23 +216,53 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="live_price_box">
-                            <a href="#">
-                                <div class="d-flex coin_name align-items-center">
-                                    <img src="img/btc.png" alt="" class="">
-                                    <h5>
-                                        Btc
-                                    </h5>
-                                </div>
-                            </a>
-                            <div class="chart">
-                                <canvas id="myChart"></canvas>
+                        <a href="#">
+                            <div class="d-flex coin_name align-items-center">
+                                <img src="img/btc.png" alt="" class="">
+                                <h5>
+                                    Btc
+                                </h5>
                             </div>
+                        </a>
+                        <div class="chart">
+                            <canvas id="myChart"></canvas>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- Connecting area -->
+    <div class="Connecting_area">
+        <img class="Connecting_area_top_shape" src="img/down.svg" alt="">
+        <img class="Connecting_area_buttom_shape" src="img/down.svg" alt="">
+        <div class="container">
+            <div class="row align-item-center justify-content-center">
+                <div class="col-md-6">
+                    <div class="Connecting_area_left">
+                        <span class="shape_line"></span>
+                        <h2>
+                            Connecting The World
+                        </h2>
+                        <h2 class="font-weight-light">
+                            To Crypto Currency
+                        </h2>
+                        <p class="p1">
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered 
+                            alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                        </p>
+                        <a href="#" class="btn_a"> read more</a>
+                    </div>
 
+                </div>
+                <div class="col-md-6">
+                    <div class="Connecting_area_right">
+                        <img src="img/Group-2603.png" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
