--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
         <div class="slider_bg" style="background-image: url('img/bg-home.svg');">
             <div class="container ">
                 <div class="bg_shape rellax bg_shape1" data-rellax-speed="4">
-                    <img src="img/Group-1769.png" class="jarallax-img" alt="">
+                    <img src="img/Group-1769.png" alt="">
                 </div>
                 <div class="bg_shape rellax bg_shape2" data-rellax-speed="10">
-                    <img src="img/Group-122.png" class="jarallax-img" alt="">
+                    <img src="img/Group-122.png" alt="">
                 </div>
                 <div class="row ">
                     <div class="col-md-5">
@@ -234,7 +234,7 @@
     </div>
     <!-- Connecting area -->
     <div class="Connecting_area">
-        <img class="Connecting_area_top_shape" src="img/down.svg" alt="">
+        <img class="Connecting_area_top_shape" src="img/up.svg" alt="">
         <img class="Connecting_area_buttom_shape" src="img/down.svg" alt="">
         <div class="container">
             <div class="row align-item-center justify-content-center">
@@ -247,24 +247,212 @@
                         <h2 class="font-weight-light">
                             To Crypto Currency
                         </h2>
-                        <p class="p1">
-                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered 
-                            alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                        <p class="p1 mb_40">
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour, or randomised words which don't look even
+                            slightly believable.
                         </p>
                         <a href="#" class="btn_a"> read more</a>
                     </div>
-
                 </div>
                 <div class="col-md-6">
                     <div class="Connecting_area_right">
+                        <div class="Connecting_bg_shape1 rellax " data-rellax-speed="1">
+                            <img src="img/Group-1769.png" alt="" class="w-100">
+                        </div>
+                        <div class="Connecting_bg_shape2 rellax" data-rellax-speed="3">
+                            <img src="img/Group-122.png" alt="" class="w-100">
+                        </div>
                         <img src="img/Group-2603.png" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- Our Services area -->
+    <div class="service_area">
+        <div class="container">
+            <div class="service_area_text text-center mb_30">
+                <span class="shape_line"></span>
+                <h3 class="mb_15">
+                    Our Services & Features
+                </h3>
+                <p class="p2 text-center">
+                    There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some look even slightly believable.
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="service_box">
+                        <img src="img/altcoins.png" alt="" class="img-fluid">
+                        <h5>Margin Trading</h5>
+                        <p>
+                            There are many variations of available, but the majority have suffered alteration in some
+                            form, by injected humour .
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="service_box">
+                        <img src="img/bitcoin-calculator.png" alt="" class="img-fluid">
+                        <h5>Currency converter</h5>
+                        <p>
+                            There are many variations of available, but the majority have suffered alteration in some
+                            form, by injected humour .
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="service_box">
+                        <img src="img/mining-hardware.png" alt="" class="img-fluid">
+                        <h5>Advice For Mining</h5>
+                        <p>
+                            There are many variations of available, but the majority have suffered alteration in some
+                            form, by injected humour .
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="service_box">
+                        <img src="img/bitcoin-encryption.png" alt="" class="img-fluid">
+                        <h5>Best security</h5>
+                        <p>
+                            There are many variations of available, buts the majority have suffered alteration in some
+                            form, by injected humour .
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Happy Clients area  -->
+    <div class="happy_clients_area mb_50">
+        <div class="container">
+            <div class="happy_clients_area_text text-center mb_30">
+                <span class="shape_line"></span>
+                <h3 class="mb_15">
+                    Our Happy Clients
+                </h3>
+                <p class="p2 text-center">
+                    There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some look even slightly believable.
+                </p>
+            </div>
+            <div class="owl-carousel client_carousel">
+                <div class="client_box item ">
+                    <div class="code">
+                        <img src="img/Path_5649-3.svg" alt="" class="w-100">
+                    </div>
+                    <p class="p1">
+                        There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
+                        which slightly believable.
+                    </p>
+                    <div class="client_details">
+                        <div class="client_img">
+                            <img src="img/c1.jpg" alt="" class="w-100">
+                        </div>
+                        <div class="client_name">
+                            <h5 class="text-white">Elon Musk</h5>
+                            <p class="p1">Co-founder</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client_box item">
+                    <div class="code">
+                        <img src="img/Path_5649-3.svg" alt="" class="w-100">
+                    </div>
+                    <p class="p1">
+                        There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
+                        which slightly believable.
+                    </p>
+                    <div class="client_details">
+                        <div class="client_img">
+                            <img src="img/c1.jpg" alt="" class="w-100">
+                        </div>
+                        <div class="client_name">
+                            <h5 class="text-white">Elon Musk</h5>
+                            <p class="p1">Co-founder</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client_box item">
+                    <div class="code">
+                        <img src="img/Path_5649-3.svg" alt="" class="w-100">
+                    </div>
+                    <p class="p1">
+                        There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
+                        which slightly believable.
+                    </p>
+                    <div class="client_details">
+                        <div class="client_img">
+                            <img src="img/c1.jpg" alt="" class="w-100">
+                        </div>
+                        <div class="client_name">
+                            <h5 class="text-white">Elon Musk</h5>
+                            <p class="p1">Co-founder</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client_box item">
+                    <div class="code">
+                        <img src="img/Path_5649-3.svg" alt="" class="w-100">
+                    </div>
+                    <p class="p1">
+                        There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
+                        which slightly believable.
+                    </p>
+                    <div class="client_details">
+                        <div class="client_img">
+                            <img src="img/c1.jpg" alt="" class="w-100">
+                        </div>
+                        <div class="client_name">
+                            <h5 class="text-white">Elon Musk</h5>
+                            <p class="p1">Co-founder</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client_box item">
+                    <div class="code">
+                        <img src="img/Path_5649-3.svg" alt="" class="w-100">
+                    </div>
+                    <p class="p1">
+                        There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
+                        which slightly believable.
+                    </p>
+                    <div class="client_details">
+                        <div class="client_img">
+                            <img src="img/c1.jpg" alt="" class="w-100">
+                        </div>
+                        <div class="client_name">
+                            <h5 class="text-white">Elon Musk</h5>
+                            <p class="p1">Co-founder</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client_box item">
+                    <div class="code">
+                        <img src="img/Path_5649-3.svg" alt="" class="w-100">
+                    </div>
+                    <p class="p1">
+                        There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
+                        which slightly believable.
+                    </p>
+                    <div class="client_details">
+                        <div class="client_img">
+                            <img src="img/c1.jpg" alt="" class="w-100">
+                        </div>
+                        <div class="client_name">
+                            <h5 class="text-white">Elon Musk</h5>
+                            <p class="p1">Co-founder</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-
+    </div>
 
 
 
