--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="col-md-3 col-8 text-left">
                     <!--logo start-->
                     <div class="logo">
-                        <a href="#"><img src="img/logo.png" class="img-fluid" alt=""></a>
+                        <a href="#"><img src="img/logo.png" class="img-fluid"></a>
                     </div>
                     <!--logo end-->
                 </div>
@@ -131,10 +131,10 @@
         <div class="slider_bg" style="background-image: url('img/bg-home.svg');">
             <div class="container ">
                 <div class="bg_shape rellax bg_shape1" data-rellax-speed="4">
-                    <img src="img/Group-1769.png" alt="">
+                    <img src="img/Group-1769.png">
                 </div>
                 <div class="bg_shape rellax bg_shape2" data-rellax-speed="10">
-                    <img src="img/Group-122.png" alt="">
+                    <img src="img/Group-122.png">
                 </div>
                 <div class="row ">
                     <div class="col-md-5">
@@ -154,7 +154,7 @@
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <img src="img/Group-1910.png" alt="" class="img-fluid">
+                        <img src="img/Group-1910.png" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -218,7 +218,7 @@
                     <div class="live_price_box">
                         <a href="#">
                             <div class="d-flex coin_name align-items-center">
-                                <img src="img/btc.png" alt="" class="">
+                                <img src="img/btc.png" class="">
                                 <h5>
                                     Btc
                                 </h5>
@@ -234,8 +234,8 @@
     </div>
     <!-- Connecting area -->
     <div class="Connecting_area">
-        <img class="Connecting_area_top_shape" src="img/up.svg" alt="">
-        <img class="Connecting_area_buttom_shape" src="img/down.svg" alt="">
+        <img class="Connecting_area_top_shape" src="img/up.svg">
+        <img class="Connecting_area_buttom_shape" src="img/down.svg">
         <div class="container">
             <div class="row align-item-center justify-content-center">
                 <div class="col-md-6">
@@ -259,12 +259,12 @@
                 <div class="col-md-6">
                     <div class="Connecting_area_right">
                         <div class="Connecting_bg_shape1 rellax " data-rellax-speed="1">
-                            <img src="img/Group-1769.png" alt="" class="w-100">
+                            <img src="img/Group-1769.png" class="w-100">
                         </div>
                         <div class="Connecting_bg_shape2 rellax" data-rellax-speed="3">
-                            <img src="img/Group-122.png" alt="" class="w-100">
+                            <img src="img/Group-122.png" class="w-100">
                         </div>
-                        <img src="img/Group-2603.png" alt="" class="img-fluid">
+                        <img src="img/Group-2603.png" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -286,7 +286,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="service_box">
-                        <img src="img/altcoins.png" alt="" class="img-fluid">
+                        <img src="img/altcoins.png" class="img-fluid">
                         <h5>Margin Trading</h5>
                         <p>
                             There are many variations of available, but the majority have suffered alteration in some
@@ -296,7 +296,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="service_box">
-                        <img src="img/bitcoin-calculator.png" alt="" class="img-fluid">
+                        <img src="img/bitcoin-calculator.png" class="img-fluid">
                         <h5>Currency converter</h5>
                         <p>
                             There are many variations of available, but the majority have suffered alteration in some
@@ -306,7 +306,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="service_box">
-                        <img src="img/mining-hardware.png" alt="" class="img-fluid">
+                        <img src="img/mining-hardware.png" class="img-fluid">
                         <h5>Advice For Mining</h5>
                         <p>
                             There are many variations of available, but the majority have suffered alteration in some
@@ -316,7 +316,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="service_box">
-                        <img src="img/bitcoin-encryption.png" alt="" class="img-fluid">
+                        <img src="img/bitcoin-encryption.png" class="img-fluid">
                         <h5>Best security</h5>
                         <p>
                             There are many variations of available, buts the majority have suffered alteration in some
@@ -343,7 +343,7 @@
             <div class="owl-carousel client_carousel">
                 <div class="client_box item ">
                     <div class="code">
-                        <img src="img/Path_5649-3.svg" alt="" class="w-100">
+                        <img src="img/Path_5649-3.svg" class="w-100">
                     </div>
                     <p class="p1">
                         There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
@@ -351,7 +351,7 @@
                     </p>
                     <div class="client_details">
                         <div class="client_img">
-                            <img src="img/c1.jpg" alt="" class="w-100">
+                            <img src="img/c1.jpg" class="w-100">
                         </div>
                         <div class="client_name">
                             <h5 class="text-white">Elon Musk</h5>
@@ -361,7 +361,7 @@
                 </div>
                 <div class="client_box item">
                     <div class="code">
-                        <img src="img/Path_5649-3.svg" alt="" class="w-100">
+                        <img src="img/Path_5649-3.svg" class="w-100">
                     </div>
                     <p class="p1">
                         There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
@@ -369,7 +369,7 @@
                     </p>
                     <div class="client_details">
                         <div class="client_img">
-                            <img src="img/c1.jpg" alt="" class="w-100">
+                            <img src="img/c1.jpg" class="w-100">
                         </div>
                         <div class="client_name">
                             <h5 class="text-white">Elon Musk</h5>
@@ -379,7 +379,7 @@
                 </div>
                 <div class="client_box item">
                     <div class="code">
-                        <img src="img/Path_5649-3.svg" alt="" class="w-100">
+                        <img src="img/Path_5649-3.svg" class="w-100">
                     </div>
                     <p class="p1">
                         There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
@@ -387,7 +387,7 @@
                     </p>
                     <div class="client_details">
                         <div class="client_img">
-                            <img src="img/c1.jpg" alt="" class="w-100">
+                            <img src="img/c1.jpg" class="w-100">
                         </div>
                         <div class="client_name">
                             <h5 class="text-white">Elon Musk</h5>
@@ -397,7 +397,7 @@
                 </div>
                 <div class="client_box item">
                     <div class="code">
-                        <img src="img/Path_5649-3.svg" alt="" class="w-100">
+                        <img src="img/Path_5649-3.svg" class="w-100">
                     </div>
                     <p class="p1">
                         There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
@@ -405,7 +405,7 @@
                     </p>
                     <div class="client_details">
                         <div class="client_img">
-                            <img src="img/c1.jpg" alt="" class="w-100">
+                            <img src="img/c1.jpg" class="w-100">
                         </div>
                         <div class="client_name">
                             <h5 class="text-white">Elon Musk</h5>
@@ -415,7 +415,7 @@
                 </div>
                 <div class="client_box item">
                     <div class="code">
-                        <img src="img/Path_5649-3.svg" alt="" class="w-100">
+                        <img src="img/Path_5649-3.svg" class="w-100">
                     </div>
                     <p class="p1">
                         There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
@@ -423,7 +423,7 @@
                     </p>
                     <div class="client_details">
                         <div class="client_img">
-                            <img src="img/c1.jpg" alt="" class="w-100">
+                            <img src="img/c1.jpg" class="w-100">
                         </div>
                         <div class="client_name">
                             <h5 class="text-white">Elon Musk</h5>
@@ -433,7 +433,7 @@
                 </div>
                 <div class="client_box item">
                     <div class="code">
-                        <img src="img/Path_5649-3.svg" alt="" class="w-100">
+                        <img src="img/Path_5649-3.svg" class="w-100">
                     </div>
                     <p class="p1">
                         There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
@@ -441,7 +441,61 @@
                     </p>
                     <div class="client_details">
                         <div class="client_img">
-                            <img src="img/c1.jpg" alt="" class="w-100">
+                            <img src="img/c1.jpg" class="w-100">
+                        </div>
+                        <div class="client_name">
+                            <h5 class="text-white">Elon Musk</h5>
+                            <p class="p1">Co-founder</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client_box item">
+                    <div class="code">
+                        <img src="img/Path_5649-3.svg" class="w-100">
+                    </div>
+                    <p class="p1">
+                        There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
+                        which slightly believable.
+                    </p>
+                    <div class="client_details">
+                        <div class="client_img">
+                            <img src="img/c1.jpg" class="w-100">
+                        </div>
+                        <div class="client_name">
+                            <h5 class="text-white">Elon Musk</h5>
+                            <p class="p1">Co-founder</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client_box item">
+                    <div class="code">
+                        <img src="img/Path_5649-3.svg" class="w-100">
+                    </div>
+                    <p class="p1">
+                        There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
+                        which slightly believable.
+                    </p>
+                    <div class="client_details">
+                        <div class="client_img">
+                            <img src="img/c1.jpg" class="w-100">
+                        </div>
+                        <div class="client_name">
+                            <h5 class="text-white">Elon Musk</h5>
+                            <p class="p1">Co-founder</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client_box item">
+                    <div class="code">
+                        <img src="img/Path_5649-3.svg" class="w-100">
+                    </div>
+                    <p class="p1">
+                        There are many variations of passages of Lorem Ipsum form, by injected humour randomised words
+                        which slightly believable.
+                    </p>
+                    <div class="client_details">
+                        <div class="client_img">
+                            <img src="img/c1.jpg" class="w-100">
                         </div>
                         <div class="client_name">
                             <h5 class="text-white">Elon Musk</h5>
@@ -451,7 +505,114 @@
                 </div>
             </div>
         </div>
-
+    </div>
+    <!-- recent articles -->
+    <div class="recent_articles">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="recent_articles_left">
+                        <h3>Recent Articles</h3>
+                        <p>
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some look
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div class="recent_articles_right">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer area  -->
+    <div class="footer_area">
+        <div class="container">
+            <div class="footer_top">
+                <div class="footer_top_wrap">
+                    <div class="footer_top_left">
+                        <h3 class="text-white">Let's Talk About Cryptocurrency</h3>
+                        <p class="p1">There are many variations of passages of Lorem Ipsum available, but the majority
+                            have suffered
+                            alteration</p>
+                    </div>
+                    <div class="footer_top_fight">
+                        <a href="#" class="btn_a">
+                            get Start Now
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_bottom">
+                <div class="row">
+                    <div class="col-md-3 mb_40">
+                        <div class="footer_logo">
+                            <img src="img/logo.png" class="w-100">
+                        </div>
+                        <p class="p1 mt_40 mb_30">
+                            There are many variations of passages of Lorem Ipsum available,
+                            but the majority have suffered alteration in some look even slightly believable.
+                        </p>
+                        <div class="footer_icon">
+                            <a href="#">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb_40">
+                        <div class="contact_info mt_20">
+                            <h5>
+                                Contact Info
+                            </h5>
+                            <div class="mt_20">
+                                <span>Address : </span>
+                                <p class="p1">Patricia C. Amedee 4401 Waldeck Street Grapevine Nashville, Tx 76051</p>
+                            </div>
+                            <div class="mt_20">
+                                <span>Phone : </span>
+                                <p class="p1">+99 (0) 101 0000 888</p>
+                            </div>
+                            <div class="mt_20">
+                                <span>Email : </span>
+                                <p class="p1">Info@yourdomain.com</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb_40">
+                        <div class="Quick_Links mt_20">
+                            <h5>
+                                Quick Links
+                            </h5>
+                            <a href="#" class="p1">Home</a>
+                            <a href="#" class="p1">Blog</a>
+                            <a href="#" class="p1">About</a>
+                            <a href="#" class="p1">Policy & Privacy</a>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb_40">
+                        <div class="Newsletter mt_20">
+                            <h5>
+                                Newsletter
+                            </h5>
+                            <form action="#">
+                                <input type="email" required class="input_box" placeholder="Email Address">
+                                <button type="submit" class="submit_btn btn_a">Subscribe</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
