--- a/index.html
+++ b/index.html
@@ -513,14 +513,187 @@
                 <div class="col-md-3">
                     <div class="recent_articles_left">
                         <h3>Recent Articles</h3>
-                        <p>
+                        <p class="mt_30 mb_30">
                             There are many variations of passages of Lorem Ipsum available, but the majority have
                             suffered alteration in some look
                         </p>
+                        <a href="#" class="btn_a">
+                            read more
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-9">
                     <div class="recent_articles_right">
+                        <div class="owl-carousel owl-theme">
+                            <div class="item">
+                                <div class="recent_articles_right_box">
+                                    <div class="recent_articles_right_img">
+                                        <a href="#">
+                                            <img src="img/r1.jpeg" alt="r1" class="img-fluid">
+                                        </a>
+                                    </div>
+                                    <div class="article_date d-flex justify-content-between mt_15 mb_15">
+                                        <a href="#">November 3, 2021</a>
+                                        <span>
+                                            By<a href="#" class="pl_5">coderchaf</a>
+                                        </span>
+                                    </div>
+                                    <h5 class="article_title mb_15">
+                                        <a href="#">
+                                            Lorem ipsum, dolor sit amet consectetur elit.
+                                        </a>
+                                    </h5>
+                                    <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore minus rerum
+                                        similique non quam harum eveniet amet, deleniti ipsa architecto quisquam eius,
+                                        vero magnam aut
+                                        nulla accusantium illo quibusdam nisi eos fugiat dolorum id earum. Vero ducimus
+                                        non cum possimus quibusdam nobis explicabo! Natus.
+                                    </p>
+                                    <a href="#" class="btn_a recent_articles_right_btn"> read more</a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="recent_articles_right_box">
+                                    <div class="recent_articles_right_img">
+                                        <a href="#">
+                                            <img src="img/r2.jpeg" alt="r2" class="img-fluid">
+                                        </a>
+                                    </div>
+                                    <div class="article_date d-flex justify-content-between mt_15 mb_15">
+                                        <a href="#">November 3, 2021</a>
+                                        <span>
+                                            By<a href="#" class="pl_5">coderchaf</a>
+                                        </span>
+                                    </div>
+                                    <h5 class="article_title mb_15">
+                                        <a href="#">
+                                            Lorem ipsum, dolor sit amet consectetur elit.
+                                        </a>
+                                    </h5>
+                                    <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore minus rerum
+                                        similique non quam harum eveniet amet, deleniti ipsa architecto quisquam eius,
+                                        vero magnam aut
+                                        nulla accusantium illo quibusdam nisi eos fugiat dolorum id earum. Vero ducimus
+                                        non cum possimus quibusdam nobis explicabo! Natus.
+                                    </p>
+                                    <a href="#" class="btn_a recent_articles_right_btn"> read more</a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="recent_articles_right_box">
+                                    <div class="recent_articles_right_img">
+                                        <a href="#">
+                                            <img src="img/r3.jpeg" alt="r3" class="img-fluid">
+                                        </a>
+                                    </div>
+                                    <div class="article_date d-flex justify-content-between mt_15 mb_15">
+                                        <a href="#">November 3, 2021</a>
+                                        <span>
+                                            By<a href="#" class="pl_5">coderchaf</a>
+                                        </span>
+                                    </div>
+                                    <h5 class="article_title mb_15">
+                                        <a href="#">
+                                            Lorem ipsum, dolor sit amet consectetur elit.
+                                        </a>
+                                    </h5>
+                                    <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore minus rerum
+                                        similique non quam harum eveniet amet, deleniti ipsa architecto quisquam eius,
+                                        vero magnam aut
+                                        nulla accusantium illo quibusdam nisi eos fugiat dolorum id earum. Vero ducimus
+                                        non cum possimus quibusdam nobis explicabo! Natus.
+                                    </p>
+                                    <a href="#" class="btn_a recent_articles_right_btn"> read more</a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="recent_articles_right_box">
+                                    <div class="recent_articles_right_img">
+                                        <a href="#">
+                                            <img src="img/r4.jpeg" alt="r4" class="img-fluid">
+                                        </a>
+                                    </div>
+                                    <div class="article_date d-flex justify-content-between mt_15 mb_15">
+                                        <a href="#">November 3, 2021</a>
+                                        <span>
+                                            By<a href="#" class="pl_5">coderchaf</a>
+                                        </span>
+                                    </div>
+                                    <h5 class="article_title mb_15">
+                                        <a href="#">
+                                            Lorem ipsum, dolor sit amet consectetur elit.
+                                        </a>
+                                    </h5>
+                                    <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore minus rerum
+                                        similique non quam harum eveniet amet, deleniti ipsa architecto quisquam eius,
+                                        vero magnam aut
+                                        nulla accusantium illo quibusdam nisi eos fugiat dolorum id earum. Vero ducimus
+                                        non cum possimus quibusdam nobis explicabo! Natus.
+                                    </p>
+                                    <a href="#" class="btn_a recent_articles_right_btn"> read more</a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="recent_articles_right_box">
+                                    <div class="recent_articles_right_img">
+                                        <a href="#">
+                                            <img src="img/r5.jpeg" alt="r5" class="img-fluid">
+                                        </a>
+                                    </div>
+                                    <div class="article_date d-flex justify-content-between mt_15 mb_15">
+                                        <a href="#">November 3, 2021</a>
+                                        <span>
+                                            By<a href="#" class="pl_5">coderchaf</a>
+                                        </span>
+                                    </div>
+                                    <h5 class="article_title mb_15">
+                                        <a href="#">
+                                            Lorem ipsum, dolor sit amet consectetur elit.
+                                        </a>
+                                    </h5>
+                                    <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore minus rerum
+                                        similique non quam harum eveniet amet, deleniti ipsa architecto quisquam eius,
+                                        vero magnam aut
+                                        nulla accusantium illo quibusdam nisi eos fugiat dolorum id earum. Vero ducimus
+                                        non cum possimus quibusdam nobis explicabo! Natus.
+                                    </p>
+                                    <a href="#" class="btn_a recent_articles_right_btn"> read more</a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="recent_articles_right_box">
+                                    <div class="recent_articles_right_img">
+                                        <a href="#">
+                                            <img src="img/r6.jpeg" alt="r6" class="img-fluid">
+                                        </a>
+                                    </div>
+                                    <div class="article_date d-flex justify-content-between mt_15 mb_15">
+                                        <a href="#">November 3, 2021</a>
+                                        <span>
+                                            By<a href="#" class="pl_5">coderchaf</a>
+                                        </span>
+                                    </div>
+                                    <h5 class="article_title mb_15">
+                                        <a href="#">
+                                            Lorem ipsum, dolor sit amet consectetur elit.
+                                        </a>
+                                    </h5>
+                                    <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore minus rerum
+                                        similique non quam harum eveniet amet, deleniti ipsa architecto quisquam eius,
+                                        vero magnam aut
+                                        nulla accusantium illo quibusdam nisi eos fugiat dolorum id earum. Vero ducimus
+                                        non cum possimus quibusdam nobis explicabo! Natus.
+                                    </p>
+                                    <a href="#" class="btn_a recent_articles_right_btn"> read more</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
