--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </div>
     </div>
     <!-- Cryptocurrency Live Pricing -->
-    <div class="Live_Pricing_area">
+    <!-- <div class="Live_Pricing_area">
         <div class="container">
             <div class="Live_Pricing_area_text text-center">
                 <span class="shape_line"></span>
@@ -231,7 +231,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Connecting area -->
     <div class="Connecting_area">
         <img class="Connecting_area_top_shape" src="img/up.svg">
@@ -538,7 +538,7 @@
                                             By<a href="#" class="pl_5">coderchaf</a>
                                         </span>
                                     </div>
-                                    <h5 class="article_title mb_15">
+                                    <h5 class="article_title mb_10">
                                         <a href="#">
                                             Lorem ipsum, dolor sit amet consectetur elit.
                                         </a>
@@ -566,7 +566,7 @@
                                             By<a href="#" class="pl_5">coderchaf</a>
                                         </span>
                                     </div>
-                                    <h5 class="article_title mb_15">
+                                    <h5 class="article_title mb_10">
                                         <a href="#">
                                             Lorem ipsum, dolor sit amet consectetur elit.
                                         </a>
@@ -594,7 +594,7 @@
                                             By<a href="#" class="pl_5">coderchaf</a>
                                         </span>
                                     </div>
-                                    <h5 class="article_title mb_15">
+                                    <h5 class="article_title mb_10">
                                         <a href="#">
                                             Lorem ipsum, dolor sit amet consectetur elit.
                                         </a>
@@ -622,7 +622,7 @@
                                             By<a href="#" class="pl_5">coderchaf</a>
                                         </span>
                                     </div>
-                                    <h5 class="article_title mb_15">
+                                    <h5 class="article_title mb_10">
                                         <a href="#">
                                             Lorem ipsum, dolor sit amet consectetur elit.
                                         </a>
@@ -650,7 +650,7 @@
                                             By<a href="#" class="pl_5">coderchaf</a>
                                         </span>
                                     </div>
-                                    <h5 class="article_title mb_15">
+                                    <h5 class="article_title mb_10">
                                         <a href="#">
                                             Lorem ipsum, dolor sit amet consectetur elit.
                                         </a>
@@ -678,7 +678,7 @@
                                             By<a href="#" class="pl_5">coderchaf</a>
                                         </span>
                                     </div>
-                                    <h5 class="article_title mb_15">
+                                    <h5 class="article_title mb_10">
                                         <a href="#">
                                             Lorem ipsum, dolor sit amet consectetur elit.
                                         </a>
